# ChangeLog for dev-python/pytest
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pytest/ChangeLog,v 1.80 2013/11/16 04:54:05 floppym Exp $

  16 Nov 2013; Mike Gilbert <floppym@gentoo.org> pytest-2.4.2.ebuild:
  Ignore silly test_simple.yml file when running tests. Thanks to idella4 for
  testing.

*pytest-2.4.2 (14 Nov 2013)

  14 Nov 2013; Matthew Thode <prometheanfire@gentoo.org> +pytest-2.4.2.ebuild:
  pytest bump

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> pytest-2.3.5.ebuild:
  Marked ~x64-macos, bug #487670

  14 Sep 2013; Mike Gilbert <floppym@gentoo.org> pytest-2.3.5.ebuild:
  Call distutils-r1_python_install_all.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> pytest-2.3.4.ebuild,
  pytest-2.3.5.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  18 Aug 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for x86, wrt bug #478344

  07 Aug 2013; Michał Górny <mgorny@gentoo.org> pytest-2.3.4.ebuild,
  pytest-2.3.5.ebuild:
  Drop removed Python implementations from PYTHON_COMPAT.

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for s390, wrt bug #478344

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for ppc64, wrt bug #478344

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for ia64, wrt bug #478344

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for sparc, wrt bug #478344

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for alpha, wrt bug #478344

  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for arm, wrt bug #478344

  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> pytest-2.3.5.ebuild:
  Stable for ppc, wrt bug #478344

  27 Jul 2013; Jeroen Roovers <jer@gentoo.org> pytest-2.3.5.ebuild:
  Stable for HPPA (bug #478344).
