@@ -7,13 +7,23 @@ DIST pytest-2.3.5.tar.gz 426328 SHA256 804c28bef415fc6a54de7934f05b2d67a9cc8a230
 DIST pytest-2.4.2.tar.gz 553004 SHA256 bccbbed432b1e95381fbb958c27aabcb751ccc337769091de8b7e5cd25ca00e0 SHA512 2ffbc74c536fa4542b9f9afb257428cde98648c76335bdc8d3fd515fd094410fe1e71e502918d780f1d8070bebf4e4c24b33cab04d0f48ca983d907bfc43d3db WHIRLPOOL e51543a549622dfd204551f3625c62cdac84b33107e5dd493574a6f05f4ee55a830ec52ce23580733471df89450caa0d389cc77c9966186bd9d2d64e57403638
 EBUILD pytest-2.3.4.ebuild 1553 SHA256 2f4b1884ff0adb1b8bc24d51b76f85c3f9ba130d95e5d751fba4bd4b464601ab SHA512 583ebc17c7d5ab0871f0d7e35a2aa46c11373aa3796efc42afe9b854a790e7fd33db5bc4d82126538036cf34eb030506cef595db748c78a0be184a75e5011183 WHIRLPOOL d68c04f2372404605d01e1447d4353d5f1aefd9a7057b8550139695be1dfb5ade5c431759cce495e09dd882f1eb897a6cebad9b7815444c45ab998d00b565d49
 EBUILD pytest-2.3.5.ebuild 1513 SHA256 0a7521ee1240942a878c1cbe51fc29f513c628c61ec1cd7b3a45786e15427e5c SHA512 cbf571f8fc88ecb6577e9e6279563e19ace136a5cdd68dcf0bf2e49c5d631b412c7a2a1a54562c8f72c512c38fd73831500af6b8a46f611231540feac94cef35 WHIRLPOOL a35ef93ac48ffa876bee4006cff2024cae227f70ec92c934d3a34a46c1c3f63fa13e49405e51bc2aa901f62e308284fe3e2275037ca9c044ec60219d2fec51e4
-EBUILD pytest-2.4.2.ebuild 1673 SHA256 3e34ef5840d5834707fb10f351263da8ebf6d40e835c687891e4a4b2e87af3dd SHA512 91ddc9ffb9942023b6520be95ab114519f392271dcd7283b5fd6568c2fca3655d13a5a59b097a406ae681bab8bbd6b021b2b004420b234d6c577e312484a38e1 WHIRLPOOL 5b63bea8983385867a694c6f7d83ca83d2ed9b554f41410aa1fba07ca79098a456b35fc1da0d1dd179fcd4f6c1635e1a6b15437239dbc8880be23b259fdcaef6
-MISC ChangeLog 10299 SHA256 fd11ec8beaa62a702e3483443c978df349265acb9715655de08133966d3d04d8 SHA512 a9774dade403f3ab5c36f9b8369e0be36f529e5b78d30bd13af2feca4f60e84885853bdb943ab590daa700cbecf01b16510ec36cb65e876223c22fc62a638854 WHIRLPOOL 2a05014aadb6063b5011d5a0dd0ce8642c46a06310e3696634f098072ce859a7efaedee1844ebfa3f65050b92e038b73dad2045d45fb6b817fcb895903f8c7aa
+EBUILD pytest-2.4.2.ebuild 2018 SHA256 db6c9cfbd3f9d6c689a2fbcd8712d26b0357578022b00c26ba9a39fa084db6a3 SHA512 8d3997af2efc85ae35f2b1bb5494823132ea3b7b4be822822257fe72ec8ee43a25e2713ee9ab92f41bf65839a3216898314e5f6036e7fb2740482d174c960e7f WHIRLPOOL 60fbb1ee0f8e03c297abd9b97846d6a96a390d1b5bd8c912fa05e865f0a5d9ebe8a110161c984c5c27c49939dab43b8e636eeffa76cd180848a23b9dbc2f512e
+MISC ChangeLog 10448 SHA256 a1cdbe2647b1e5fcfceb72939693c0d5d0571c14165451486a1e82d622b2cde6 SHA512 997f60bfd4f303ed91185aa7cda735045d8e6c6b52b129a2ca579fea06fd990ecbd572f4eda9458d9f777159bbeb6c073c67231ef32cfb40b5801176149dee0c WHIRLPOOL f6b0654cc68aeb7e87ff1ae7dee313bdf566e144a21f27c8cb3995e1c4056c5db6223ac8d7b8905dbdeb04e153db91c3381db94f3444bf4a194ea7fbc005c2f5
 MISC metadata.xml 229 SHA256 d84d28d5adf361bcc2b76c4b2c47920c5b06472add64c47c790522f180f93dce SHA512 9ad7198911f7c6318bcca718f8ab1d436ea14df3edefab5d5b20e36f9ab2c06f3d7d1d3a89ace9b6485b36a93bae88db28d443f51a375c8c2b8f4fe750657139 WHIRLPOOL 0aa5c9b1a9e5f07dfff7cd90a8ecb9ba54820d13261b822a8978492ff3a22369d27cafae2f772f76aac0f55f42e4b636b7c5190677eb6404be6002782ee79925
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlKG+m4ACgkQC77qH+pIQ6TlTQD+PorDHAodyIneU0guQKLEda5L
-aiqzErbQeEMYNYd1necA/3PFUP6Ozt/6olSEfbuh2jBtIvxBiRvzAIgMS6E756Ju
-=uqOR
+iQIcBAEBCAAGBQJSiEMMAAoJECRx6z5ArFrDOQEP/iQegsofqGEpxFHx/vMTH2j6
+AadbFNslZ8IUCTHJ1/nYTvGjGinYcYPGkAjivDNesJQxsnpzrK/89io56PgwzKeq
+si9UGuBs5GFIl+6N9NOCE7fFCN+zkB2/1WsHzzRpcwASP0vrxkk3h5lFjkNEzoAJ
+hn16lKEuogI5m2W2R9Pu67yzciMeAaN15CBH+DtGENCVL62nvaVBgYry+S3OvxkJ
+nr22bJYxWY5xlJVin5g6J30Q//ppqGh+DRyNIxaXrEZ0ENE0cUJN/VoAGqkRFPDE
+bGp6ZcTuVbFj+oomzxcmnXaXVbCefKfkDxJ9sJzaj1XTekzC/uwZ2AOVF3+irUJh
++wAkbTZG/z8rcRrxpTcKPf44eocyU8cpRqVz74mqNU7f0s1rndZ5Jl0bWVh/QVS9
+FpNU46nP2kR8cTTpofqTRVQVzlHuEkBVPvTKrOfI/jTw2A+6CEIDDptQInUmGgxD
+ME6XybSG8nVY/ZTA36FpoDzYM+VgxrtZrA+dNN2lPP3iGdQP/JVPsukg3q/RrhLW
+TBREGg7MzGfqUl1lYgEbsmSwyeRI4Mp/RZjLBQpj9OkPDl/jp4rp6kg2hML/4Rwv
+JdYB+mJ4chsdWqzDlOipOgL8cuxIOt6hamKfX5v5dbFF4lGJ1vhu8wAimZT7RYQY
+FR6lkgmnuk8pSShO52cF
+=0KKz
 -----END PGP SIGNATURE-----
